--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
-﻿9.18 -> 9.19
+﻿9.19 -> 9.20
+xx/11/2015
+
+Balance changes:
+- 
+
+Others:
+- Added widget: "Darken Map": default enabled, ctrl+alt+[ or ], remembers per map, reset with /resetmapdarkness
+- Bloom Shader: intenser + darkens map a bit
+- Bet Frontend: added GUI to do a bet + 'select bet units' button
+- Ally Selected Units: when tracking player: displays checkbox to opt out following their selection
+
+
+9.18 -> 9.19
 21/11/2015
 
 Balance changes:
