--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,11 @@
 ﻿9.21 -> 9.22
-xx/11/2015
+05/12/2015
 
 - Ally selected units: disco/large dots bugfix + movable options GUI + auto-scale GUI according to resolution
-- Bet Frontend: removed dead mouseclick area when being player + unit bet list sorted by time
+- Bet Frontend: removed dead mouseclick area when being player + unit bet list sorted by time + keeps working on pause
 - Ally resourcebars: slightly larger again on small resolutions
 - Added widget: "Bloom shader highlight"
+- Passive builders (tweakUI) options only show when playing + auto scales according to resolution
 
 
 9.19 -> 9.21
