--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@
 - Snow: shows onscreen message pregame (when its snowing)
 - GUI shader and map_edge_extension: disabled by default
 - Adv playerlist mascotte: click on it to change mascotte type
+- Adv playerlist: shows alliances under playername with 0.5 opacity  
+   (alliances are only optionally availible in ffa: with /ally #number)
 
 
 9.24 -> 9.25
